[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-util = "0.3.21"
tokio = { version = "1.18.2", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.17.1", optional = true }
tokio-tungstenite-wasm = { version = "0.1.0", optional = true }
log = "0.4.17"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
futures-channel = "0.3.21"
strum = { version = "0.24", features = ["derive"] }
bimap = { version = "0.6.2", features = ["serde"] }
url = "2.0.0"

[features]
default = ["tokio", "tokio-tungstenite"]
wasm = ["tokio-tungstenite-wasm"]

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.10"