[package]
name = "howl-network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "howl_network"

[dependencies]
futures-util = "0.3.21"
tokio = { version = "1.18.2", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.17.1", optional = true }
log = "0.4.17"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
futures-channel = "0.3.21"
strum = { version = "0.24", features = ["derive", "strum_macros"] }
bimap = { version = "0.6.2", features = ["serde"] }
url = "2.0.0"
chrono = "0.4.19"
pyo3 = { version = "0.16.3", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.16.0", features = ["attributes", "tokio-runtime"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.18.2", features = ["sync", "rt"] }
ws_stream_wasm = "0.7.3"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"] }
futures = "0.3.21"
pharos = "0.5.3"
js-sys = "0.3.57"
getrandom = { version = "0.2.6", features = ["js"] }
rand = "0.8.5"

[package.metadata.maturin]
python-source = "python"

[features]
default = ["tokio", "tokio-tungstenite"]
wasm = []
python = ["pyo3", "pyo3-asyncio"]
debugging = []

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.10"
rand_chacha = "0.3.1"
rand = "0.8.5"
async-std = "1.11.0"